[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "epprint"
version = "0.0.1760909794"
description = "print() alias that writes to sys.stderr prepended by stack metadata"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "eprint @ git+https://git@github.com/jakeogh/eprint",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/epprint"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
epprint = [
    "py.typed",
]
